implemented sending notifications to lottery winners/losers, US 02.05.01
US 02.05.01